fix mobile display

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -192,25 +192,25 @@
 
     <main id="main-content" class="container" role="main">
         <!-- Introduction Section -->
-        <section class="card" style="margin-bottom: 3rem; border-top: 3px solid transparent; border-image: linear-gradient(90deg, #CD7F32 0%, #CC8E35 50%, #D2691E 100%) 1;" itemscope itemtype="https://schema.org/ScholarlyArticle">
-            <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 3rem; align-items: center;">
-                <div>
-                    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
-                        <span style="font-size: 0.75rem; color: #CC8E35; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">Genetic Research</span>
-                        <div style="flex: 1; height: 2px; background: linear-gradient(90deg, #CC8E35, transparent);"></div>
+        <section class="card home-hero-card" itemscope itemtype="https://schema.org/ScholarlyArticle">
+            <div class="home-hero-grid">
+                <div class="home-hero-content">
+                    <div class="home-hero-kicker-row">
+                        <span class="home-hero-kicker">Genetic Research</span>
+                        <div class="home-hero-kicker-line"></div>
                     </div>
-                    <h2 itemprop="headline" style="font-size: 2.25rem; line-height: 1.2; margin-bottom: 1.5rem; color: #3E2723;">Tracing an Ancient Amazigh Lineage through <span style="background: linear-gradient(135deg, #CD7F32 0%, #CC8E35 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Genetic Analysis</span></h2>
-                    <p class="text-large" style="margin-bottom: 2rem; color: #475569; line-height: 1.7;">A comprehensive multi-disciplinary study examining the convergence of indigenous North African (E-PF2546) and European (H1-T16189C!) lineages within the Chtouka confederation of the Souss-Massa region.</p>
-                    <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                        <a href="lineage.html" class="btn" style="background: #CD7F32;">📊 View Complete Analysis</a>
-                        <a href="#souss-massa" class="btn btn-outline" style="border-color: #CD7F32; color: #CD7F32;">🗺️ Explore Region</a>
+                    <h2 itemprop="headline" class="home-hero-title">Tracing an Ancient Amazigh Lineage through <span class="home-hero-accent">Genetic Analysis</span></h2>
+                    <p class="text-large home-hero-copy">A comprehensive multi-disciplinary study examining the convergence of indigenous North African (E-PF2546) and European (H1-T16189C!) lineages within the Chtouka confederation of the Souss-Massa region.</p>
+                    <div class="home-hero-actions">
+                        <a href="lineage.html" class="btn btn-copper">📊 View Complete Analysis</a>
+                        <a href="#souss-massa" class="btn btn-outline btn-outline-copper">🗺️ Explore Region</a>
                     </div>
                 </div>
-                <div style="position: relative;">
-                    <img src="img/hero-dna-morocco.jpg" alt="DNA helix visualization showing genetic heritage analysis of Amazigh Chtouka lineage from Souss-Massa, Morocco" width="800" height="300" style="width: 100%; height: 300px; object-fit: cover; border-radius: 6px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" loading="lazy">
-                    <div style="position: absolute; bottom: 1rem; left: 1rem; right: 1rem; background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); padding: 1rem; border-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                        <div style="font-size: 0.875rem; font-weight: 600; color: #1E3A5F; margin-bottom: 0.25rem;">Study Timeline</div>
-                        <div style="font-size: 0.75rem; color: #6B7280;">Research Period: 2023-2026 | 11,000+ Years Heritage Span</div>
+                <div class="home-hero-media">
+                    <img src="img/hero-dna-morocco.jpg" alt="DNA helix visualization showing genetic heritage analysis of Amazigh Chtouka lineage from Souss-Massa, Morocco" width="800" height="300" class="home-hero-image" loading="lazy">
+                    <div class="home-hero-meta">
+                        <div class="home-hero-meta-title">Study Timeline</div>
+                        <div class="home-hero-meta-copy">Research Period: 2023-2026 | 11,000+ Years Heritage Span</div>
                     </div>
                 </div>
             </div>
@@ -477,5 +477,6 @@
 
 </body>
 </html>
+
 
 
