--- a/research.html
+++ b/research.html
@@ -115,6 +115,13 @@
 
             <!-- Card 1: Salem et al. 2025 -->
             <a href="research/green-sahara-ancient-dna-2025.html" class="discovery-card discovery-card-plain discovery-card-copper">
+                <img
+                    src="img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg"
+                    alt="Takarkori rock shelter in southwestern Libya"
+                    class="discovery-cover-image"
+                    loading="lazy"
+                    decoding="async"
+                >
                 <div class="discovery-card-head">
                     <span class="discovery-tag discovery-tag-copper">Ancient DNA</span>
                     <span class="discovery-date">Jan 2025</span>
