--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -17,13 +17,13 @@
     <meta property="og:title" content="Green Sahara Ancient DNA — Salem et al. 2025">
     <meta property="og:description" content="Ancient DNA from the Green Sahara reveals ancestral North African lineage with basal haplogroup N.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta property="og:image" content="https://aitmhend-dna.github.io/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Green Sahara Ancient DNA — Salem et al. 2025">
     <meta name="twitter:description" content="Ancient DNA from the Green Sahara reveals ancestral North African lineage.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html">
@@ -113,6 +113,17 @@
             <span class="meta-pill">Estimated read: 4 min</span>
             <span class="meta-pill">Primary source: Nature (2025)</span>
         </div>
+
+        <figure class="card article-hero-media">
+            <img
+                src="../img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg"
+                alt="Takarkori rock shelter in southwestern Libya where ancient DNA remains were recovered"
+                class="article-hero-image"
+                loading="eager"
+                decoding="async"
+            >
+            <figcaption class="article-hero-caption">Takarkori rock shelter, southwestern Libya. Image used by Nature coverage of Salem et al. (2025).</figcaption>
+        </figure>
 
         <!-- Paper Info Card -->
         <section class="card article-section paper-card-copper">
