--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -134,7 +134,10 @@
             </div>
             <h2 class="paper-title">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h2>
             <p class="paper-citation">Salem, T. et al. (2025). <em>Nature</em>, 641, 144&ndash;150.</p>
-            <a href="https://doi.org/10.1038/s41586-025-08793-7" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-copper">View Full Paper (DOI) &rarr;</a>
+            <div class="paper-actions">
+                <a href="https://doi.org/10.1038/s41586-025-08793-7" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-copper">View Full Paper (DOI) &rarr;</a>
+                <a href="https://www.google.com/maps?q=24.538,10.521&ll=24.538,10.521&z=12&t=k" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-copper">View Takarkori Site (Satellite) &rarr;</a>
+            </div>
         </section>
 
         <!-- Summary -->
@@ -143,6 +146,19 @@
             <p>This landmark study recovered ancient DNA from human remains in the Takarkori rock shelter in southwestern Libya, dating to approximately 7,000 years ago during the "Green Sahara" period (African Humid Period). The Sahara was then a lush, habitable landscape supporting pastoralist communities.</p>
             <p>The researchers successfully sequenced the genome of these ancient Saharan inhabitants and discovered they carried a previously unknown basal lineage of mitochondrial haplogroup N. This lineage diverged early from other Eurasian branches and had not been detected in any modern or ancient population previously studied.</p>
             <p>The findings indicate that the Green Sahara harbored genetically distinct populations that contributed to the ancestry of later North African groups, but in complex ways that cannot be explained by simple models of north-south migration. The genetic isolation of these Saharan groups during the humid period suggests regional population structuring across North Africa during the Holocene.</p>
+        </section>
+
+        <section class="card article-section">
+            <h3>Takarkori Site Location</h3>
+            <div class="article-map-frame">
+                <iframe
+                    src="https://www.google.com/maps?q=24.538,10.521&t=k&z=12&output=embed"
+                    title="Takarkori rock shelter location (satellite map)"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </section>
 
         <!-- Key Takeaways -->
